--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
        mobile application development and machine learning with clients’ needs in mind.</p>
 
 <p><b><u>Projects I've Worked:</u></b></p>
-  <h8><u><b>Next Generation Soil Moisture Prediction:</b></u></h8>
+  <h8><u><b>Next Generation Soil Moisture Prediction:</b></u></h8>hello
 <p>I developed a full-stack web application for an organizational project using Django for the backend and Angular for the frontend.
    I implemented a predictive model using LSTM to forecast soil moisture levels based on project data. Additionally,
   I manage and incorporate weekly client requests, ensuring the project evolves to meet dynamic needs. The project is deployed on AWS, where I also set up the server infrastructure.</p>
