--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <i class="fa fa-envelope w3-xxlarge"></i>
     <p>CONTACT</p>
   </a>
-  <a href="#game" class="w3-bar-item w3-button w3-padding-large w3-hover-grey">
+  <a href="./Games/snake_game/snake_game/snakegame.html" class="w3-bar-item w3-button w3-padding-large w3-hover-grey">
     <i class="fa fa-gamepad w3-xxlarge"></i>
     <p class="w3-medium">Games</p>
   </a>
@@ -54,7 +54,7 @@
     <a href="#about" class="w3-bar-item w3-button" style="width:25% !important">ABOUT</a>
     <a href="#photos" class="w3-bar-item w3-button" style="width:25% !important">PHOTOS</a>
     <a href="#contact" class="w3-bar-item w3-button" style="width:25% !important">CONTACT</a>
-    <a href="#game" class="w3-bar-item w3-button" style="width:25% !important">Games</a>
+    <a href="./Games/snake_game/snake_game/snakegame.html" class="w3-bar-item w3-button" style="width:25% !important">Games</a>
   </div>
 </div>
 
@@ -232,7 +232,7 @@ I significantly contributed to the design, implementation, and enhancement of th
 
   <!-- Contact Section -->
   <div class="w3-padding-64 w3-content w3-text-grey" id="contact">
-    <h2 class="w3-text-light-grey">Contact Me</h2>
+    <h2 class="w3-text-light-black">Contact Me</h2>
     <hr style="width:200px" class="w3-opacity">
 
     <div class="w3-section">
